--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -21,5 +21,5 @@
 @import "./base/typography";
 
 // Components
-@import "./components/nav";
+@import "./components/header";
 @import "./components/main-content";
