--- a/src/assets/sass/base/typography.scss
+++ b/src/assets/sass/base/typography.scss
@@ -8,6 +8,19 @@
 
 .h1 {
   font-family: $base-font-family-bold;
+  font-size: 30px;
+  line-height: 1;
+  margin: 0;
+  @include media-breakpoint-up(sm) {
+    font-size: 50px;
+  }
+  @include media-breakpoint-up(md) {
+    font-size: 70px;
+  }
+  @include media-breakpoint-up(xl) {
+    font-size: 90px;
+  }
+  
 }
 
 h1 {
