--- a/src/assets/sass/components/main-content.scss
+++ b/src/assets/sass/components/main-content.scss
@@ -1,12 +1,8 @@
-/*------------------*
-# Main Content
-*------------------*/
+.container-o {
+    padding-left: 5%;
+    padding-right: 5%;
+}
 
-.main-content {
-    align-items: center;
-    display: flex;
+.hero {
     height: 100vh;
-    justify-content: center;
-    text-align: center;
-    width: 100%;
 }
