--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -10,10 +10,11 @@
     </head>
     <body>
 
-        {% include "nav.html" %}
+        {% include "header.html" %}
 
         {% block content %}{% endblock %}
-
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.min.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
