--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,16 +1,20 @@
 <header>
-    <div class="container-o">
+    <div class="container-o header-flex">
+        <div class="logo">
+            <a href="#top"><img src="/images/logo.png" alt="Oakland Agency Logo"></a>
+        </div>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
-                <li><a href="/">Services</a></li>
-                <li><a href="/">Clients</a></li>
-                <li><a href="/">Contact</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#clients">Clients</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </div>
 </header>
 
-<div class="scroll-to-top">
-    <a href="#top">up</a>
-</div>
+<a class="scroll-to-top" href="#top">
+    <img src="/images/chev.svg" alt="Scroll to top of page"/>
+</a>
+
