--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -22,4 +22,11 @@
 
 // Components
 @import "./components/header";
+@import "./components/footer";
 @import "./components/main-content";
+@import "./components/accordion";
+@import "./components/client";
+@import "./components/form";
+
+// Outside sources
+@import "./vendor/animate";
