--- a/src/assets/sass/base/typography.scss
+++ b/src/assets/sass/base/typography.scss
@@ -8,21 +8,101 @@
 
 .h1 {
   font-family: $base-font-family-bold;
-  font-size: 30px;
+  font-size: 70px;
   line-height: 1;
+  padding: 40px 0 0 0;
   margin: 0;
   @include media-breakpoint-up(sm) {
     font-size: 50px;
   }
   @include media-breakpoint-up(md) {
-    font-size: 70px;
+    font-size: 120px;
   }
   @include media-breakpoint-up(xl) {
     font-size: 90px;
   }
-  
 }
 
 h1 {
   @extend .h1;
+}
+
+.h2 {
+  font-family: $base-font-family-bold;
+  font-size: 30px;
+  text-transform: uppercase;
+  line-height: 1;
+  padding: 0px 0 0 0;
+  margin: 0;
+  @include media-breakpoint-up(sm) {
+    font-size: 50px;
+  }
+  @include media-breakpoint-up(md) {
+    font-size: 20px;
+    letter-spacing: 4px;
+  }
+  @include media-breakpoint-up(xl) {
+    font-size: 90px;
+  }
+}
+
+h2 {
+  @extend .h2;
+}
+
+.h3 {
+  font-family: $base-font-family-bold;
+  font-size: 70px;
+  line-height: 1;
+  padding: 0px 0 0 0;
+  margin: 0;
+  @include media-breakpoint-up(sm) {
+    font-size: 50px;
+  }
+  @include media-breakpoint-up(md) {
+    font-size: 80px;
+  }
+  @include media-breakpoint-up(xl) {
+    font-size: 90px;
+  }
+}
+
+h3 {
+  @extend .h3;
+}
+
+.p {
+  font-family: $base-font-family;
+  font-size: 30px;
+  line-height: 1;
+  padding: 0;
+  margin: 0 0 30px 0;
+  &:nth-last-of-type(1) {
+    margin-bottom: 0;
+  }
+  @include media-breakpoint-up(sm) {
+    font-size: 50px;
+  }
+  @include media-breakpoint-up(md) {
+    font-size: 27px;
+    line-height: 42px;
+  }
+  @include media-breakpoint-up(xl) {
+    font-size: 90px;
+  }
+  &-small {
+    font-size: 20px;
+    line-height: 1;
+  }
+  &-footer {
+    font-family: $base-font-family-medium;
+    font-size: 13px;
+    line-height: 1;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+  }
+}
+
+p {
+  @extend .p;
 }
