--- a/src/assets/sass/components/header.scss
+++ b/src/assets/sass/components/header.scss
@@ -6,36 +6,97 @@ header {
     position: fixed;
     width: 100%;
     z-index: 1;
-}
+    background: rgba($color: #000000, $alpha: 0);
+    transition: 150ms ease-in-out all;
+    &.active {
+        background: rgba($color: #000000, $alpha: 1);
+        .logo {
+            opacity: 1;
+        }
+    }
 
-nav {
-    ul {
+    .header-flex {
         display: flex;
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        justify-content: end;
-        li {
-            margin-left: 20px;
-            &:nth-of-type(1) {
-                margin: 0;
+        justify-content: space-between;
+    }
+    
+    .logo {
+        opacity: 0;
+        transition: opacity ease-in-out 150ms;
+        a {
+            display: block;
+            img {
+                width: 100px;
             }
         }
     }
-    background: rgba($color: #000000, $alpha: 0);
-    transition: 300ms ease-in-out all;
-    &.active {
-        background: rgba($color: #000000, $alpha: 1);
+    
+    nav {
+        padding-top: 50px;
+        ul {
+            display: flex;
+            margin: 0;
+            padding: 0;
+            list-style: none;
+            justify-content: flex-end;
+            li {
+                margin-left: 40px;
+                &:nth-of-type(1) {
+                    margin: 0;
+                }
+                a {
+                    font-family: $base-font-family-medium;
+                    color: $color-primary;
+                    text-transform: uppercase;
+                    text-decoration: none;
+                    letter-spacing: 4px;
+                }
+            }
+        }
     }
 }
+
+
 
 .scroll-to-top {
     position: fixed;
     bottom: 30px;
     right: 5%;
-    background: blue;
-    height: 30px;
-    width: 30px;
+    background: black;
+    height: 50px;
+    width: 50px;
+    padding: 10px;
     display: none;
+    border: 1px solid $color-primary;
     z-index: 1;
+    border-radius: 50%;
+    opacity: 0.3;
+    transition: 300ms ease-in-out opacity;
+    img {
+        display: block;
+        transform: rotate(-90deg);
+    }
+    &:hover {
+        opacity: 1;
+    }
+}
+
+.bouncing-arrow {
+    position: absolute;
+    bottom: 60px;
+    right: 5%;
+    width: 18px;
+    animation: bounce 3s infinite ease-in-out;
+}
+
+@-webkit-keyframes bounce {
+    0% { transform: translateY(-5px)  }
+    50% { transform: translateY(10px) }
+    100% { transform: translateY(-5px) }
+}
+
+@keyframes bounce {
+    0% { transform: translateY(-5px)  }
+    50% { transform: translateY(10px) }
+    100% { transform: translateY(-5px) }
 }
