--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -4,8 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Gulp Boilerplate | Gulp</title>
-
+        <title>Oakland Agency</title>
         <link rel="stylesheet" href="css/app.css" />
     </head>
     <body>
@@ -13,6 +12,9 @@
         {% include "header.html" %}
 
         {% block content %}{% endblock %}
+
+        {% include "footer.html" %}
+        <script src="https://kit.fontawesome.com/67c8213daa.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.min.js"></script>
         <script src="js/main.js"></script>
