--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -3,7 +3,7 @@
         <div class="logo">
             <a href="#top"><img src="/images/logo.png" alt="Oakland Agency Logo"></a>
         </div>
-        <nav>
+        <nav class="animate__fadeIn animate__animated animate__delay-2-7s">
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
