--- a/src/assets/sass/base/base.scss
+++ b/src/assets/sass/base/base.scss
@@ -10,6 +10,8 @@ html {
     overflow-y: scroll;
     min-height: 100%;
     word-wrap: break-word;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 * {
@@ -37,10 +39,13 @@ body {
 }
 
 .spacer {
-    padding-top: 200px;
-    padding-bottom: 200px;   
+    padding-top: 150px;
+    padding-bottom: 150px;   
 }
 
 .spacer-title {
-    margin-top: 60px;
+    margin-top: 0px;
+    @include media-breakpoint-up(sm) {
+        margin-top: 60px;
+    }
 }
