--- a/src/assets/sass/base/typography.scss
+++ b/src/assets/sass/base/typography.scss
@@ -18,9 +18,6 @@
   @include media-breakpoint-up(md) {
     font-size: 120px;
   }
-  @include media-breakpoint-up(xl) {
-    font-size: 90px;
-  }
 }
 
 h1 {
@@ -29,20 +26,16 @@ h1 {
 
 .h2 {
   font-family: $base-font-family-bold;
-  font-size: 30px;
+  font-size: 16px;
   text-transform: uppercase;
   line-height: 1;
   padding: 0px 0 0 0;
-  margin: 0;
-  @include media-breakpoint-up(sm) {
-    font-size: 50px;
-  }
+  margin: 0 0 15px 0;
+  letter-spacing: 2px;
   @include media-breakpoint-up(md) {
     font-size: 20px;
-    letter-spacing: 4px;
-  }
-  @include media-breakpoint-up(xl) {
-    font-size: 90px;
+    letter-spacing: 3px;
+    margin: 0;
   }
 }
 
@@ -62,37 +55,70 @@ h2 {
   @include media-breakpoint-up(md) {
     font-size: 80px;
   }
-  @include media-breakpoint-up(xl) {
-    font-size: 90px;
-  }
 }
 
 h3 {
   @extend .h3;
 }
 
+.h4 {
+  font-family: $base-font-family;
+  font-size: 25px;
+  line-height: 1.4;
+  padding: 0px 0 0 0;
+  text-transform: none;
+  margin: 0;
+  letter-spacing: 0px;
+  font-weight: 100;
+  @include media-breakpoint-up(md) {
+    font-size: 30px;
+  }
+}
+
+h4 {
+  @extend .h4;
+}
+
+.h5 {
+  font-family: $base-font-family-bold;
+  line-height: 1.4;
+  padding: 0px 0 0 0;
+  text-transform: none;
+  margin: 0;
+  margin-bottom: 30px;
+  letter-spacing: 0px;
+  font-weight: 100;
+  font-size: 24px;
+  margin-bottom: 20px;
+  @include media-breakpoint-up(md) {
+    font-size: 30px;
+  }
+}
+
+h5 {
+  @extend .h5;
+}
+
 .p {
   font-family: $base-font-family;
-  font-size: 30px;
-  line-height: 1;
+  font-size: 18px;
+  line-height: 28px;
   padding: 0;
   margin: 0 0 30px 0;
   &:nth-last-of-type(1) {
     margin-bottom: 0;
   }
-  @include media-breakpoint-up(sm) {
-    font-size: 50px;
-  }
   @include media-breakpoint-up(md) {
-    font-size: 27px;
-    line-height: 42px;
-  }
-  @include media-breakpoint-up(xl) {
-    font-size: 90px;
+    font-size: 22px;
+    line-height: 35px;
   }
   &-small {
-    font-size: 20px;
-    line-height: 1;
+    font-size: 16px;
+    line-height: 1.4;
+    @include media-breakpoint-up(md) {
+      font-size: 20px;
+      line-height: 1.4;
+    }
   }
   &-footer {
     font-family: $base-font-family-medium;
@@ -105,4 +131,8 @@ h3 {
 
 p {
   @extend .p;
+}
+
+.font-bold {
+  font-family: $base-font-family-bold;
 }
