--- a/src/assets/sass/components/client.scss
+++ b/src/assets/sass/components/client.scss
@@ -3,16 +3,15 @@
         img {
             width: 100%;
             display: block;
-            filter: grayscale(100%);
-            transition: 300ms ease-in-out all;
-            &:hover {
-                filter: grayscale(0%);
-            }
         }
     }
     &-content { 
         text-align: center;
         margin-top: 10px;
+        margin-bottom: 20px;
+        @include media-breakpoint-up(md) {
+            margin-bottom: 50px;
+        }
     }
 }
 
