--- a/src/assets/sass/components/header.scss
+++ b/src/assets/sass/components/header.scss
@@ -6,8 +6,13 @@ header {
     position: fixed;
     width: 100%;
     z-index: 1;
-    background: rgba($color: #000000, $alpha: 0);
+    background: black;
     transition: 150ms ease-in-out all;
+    padding-bottom: 10px;
+    @include media-breakpoint-up(sm) {
+        background: rgba($color: #000000, $alpha: 0);
+        padding-bottom: 0px;
+    }
     &.active {
         background: rgba($color: #000000, $alpha: 1);
         .logo {
@@ -18,38 +23,66 @@ header {
     .header-flex {
         display: flex;
         justify-content: space-between;
+        flex-direction: column;
+        @include media-breakpoint-up(sm) {
+            flex-direction: row;
+        }
     }
     
     .logo {
-        opacity: 0;
-        transition: opacity ease-in-out 150ms;
+        margin-top: 12px;
+        opacity: 1;
+        transition: opacity ease-in-out 200ms;
+        @include media-breakpoint-up(sm) {
+            opacity: 0;
+        }
         a {
+            text-align: center;
             display: block;
             img {
-                width: 100px;
+                width: 50px;
+                @include media-breakpoint-up(sm) {
+                    width: 90px;
+                }
+            }
+            @include media-breakpoint-up(sm) {
+                text-align: initial;
             }
         }
     }
     
     nav {
-        padding-top: 50px;
+        padding-top: 10px;
+        @include media-breakpoint-up(sm) {
+            padding-top: 50px;
+        }
         ul {
             display: flex;
             margin: 0;
             padding: 0;
             list-style: none;
-            justify-content: flex-end;
+            justify-content: space-between;
+            @include media-breakpoint-up(sm) {
+                justify-content: flex-end;
+            }
             li {
-                margin-left: 40px;
                 &:nth-of-type(1) {
                     margin: 0;
+                }
+                @include media-breakpoint-up(sm) {
+                    margin-left: 40px;
                 }
                 a {
                     font-family: $base-font-family-medium;
                     color: $color-primary;
                     text-transform: uppercase;
                     text-decoration: none;
-                    letter-spacing: 4px;
+                    letter-spacing: 2px;
+                    font-size: 13px;
+                    @include media-breakpoint-up(sm) {
+                        letter-spacing: 4px;
+                        font-size: 16px;
+                    }
                 }
             }
         }
