--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="container-o">
         <div class="row">
-          <div class="col-12 col-sm-6">
+          <div class="col-12 col-md-6">
             <div class="footer-left">
                 <img src="/images/logo.png" alt="Oakland Agency Logo">
                 <ul>
@@ -12,7 +12,7 @@
                 
             </div>
           </div>
-          <div class="col-12 col-sm-6 align-self-end">
+          <div class="col-12 col-md-6 align-self-end">
             <div class="footer-right">
                 <p>&copy; Copyright Oakland Agency 2022</p>
             </div>
