--- a/src/assets/sass/components/header.scss
+++ b/src/assets/sass/components/header.scss
@@ -9,7 +9,7 @@ header {
     background: black;
     transition: 150ms ease-in-out all;
     padding-bottom: 10px;
-    @include media-breakpoint-up(sm) {
+    @include media-breakpoint-up(md) {
         background: rgba($color: #000000, $alpha: 0);
         padding-bottom: 0px;
     }
@@ -24,7 +24,7 @@ header {
         display: flex;
         justify-content: space-between;
         flex-direction: column;
-        @include media-breakpoint-up(sm) {
+        @include media-breakpoint-up(md) {
             flex-direction: row;
         }
     }
@@ -33,7 +33,7 @@ header {
         margin-top: 12px;
         opacity: 1;
         transition: opacity ease-in-out 200ms;
-        @include media-breakpoint-up(sm) {
+        @include media-breakpoint-up(md) {
             opacity: 0;
         }
         a {
@@ -41,11 +41,11 @@ header {
             display: block;
             img {
                 width: 50px;
-                @include media-breakpoint-up(sm) {
+                @include media-breakpoint-up(md) {
                     width: 90px;
                 }
             }
-            @include media-breakpoint-up(sm) {
+            @include media-breakpoint-up(md) {
                 text-align: initial;
             }
         }
@@ -53,7 +53,7 @@ header {
     
     nav {
         padding-top: 10px;
-        @include media-breakpoint-up(sm) {
+        @include media-breakpoint-up(md) {
             padding-top: 50px;
         }
         ul {
@@ -62,14 +62,14 @@ header {
             padding: 0;
             list-style: none;
             justify-content: space-between;
-            @include media-breakpoint-up(sm) {
+            @include media-breakpoint-up(md) {
                 justify-content: flex-end;
             }
             li {
                 &:nth-of-type(1) {
                     margin: 0;
                 }
-                @include media-breakpoint-up(sm) {
+                @include media-breakpoint-up(md) {
                     margin-left: 40px;
                 }
                 a {
