--- a/src/assets/sass/base/typography.scss
+++ b/src/assets/sass/base/typography.scss
@@ -8,15 +8,15 @@
 
 .h1 {
   font-family: $base-font-family-bold;
-  font-size: 70px;
+  font-size: 40px;
   line-height: 1;
   padding: 40px 0 0 0;
-  margin: 0;
+  margin: 0 0 40px 0;
   @include media-breakpoint-up(sm) {
     font-size: 50px;
   }
   @include media-breakpoint-up(md) {
-    font-size: 120px;
+    font-size: 80px;
   }
 }
 
@@ -126,6 +126,9 @@ h5 {
     line-height: 1;
     text-transform: uppercase;
     letter-spacing: 2px;
+  }
+  a {
+    color: $color-primary;
   }
 }
 
