--- a/src/assets/sass/components/form.scss
+++ b/src/assets/sass/components/form.scss
@@ -33,5 +33,8 @@ form {
         @include media-breakpoint-up(md) {
             font-size: 20px;
         }
+        &:hover {
+            cursor: pointer;
+        }
     }
 }
