Changing font sizes and font-family and SVG.

--- a/src/assets/sass/base/variables.scss
+++ b/src/assets/sass/base/variables.scss
@@ -17,9 +17,9 @@
  * Base font family
 */
 
-$base-font-family: "hkgrotesk-regular", sans-serif;
-$base-font-family-medium: "hkgrotesk-medium", sans-serif;
-$base-font-family-bold: "hkgrotesk-bold", sans-serif;
+$base-font-family: "Acumin Pro", sans-serif;
+$base-font-family-medium: "Acumin Pro", sans-serif;
+$base-font-family-bold: "Acumin Pro", sans-serif;
 /*
  * Base font sizes
 */
