--- a/src/assets/sass/base/fonts.scss
+++ b/src/assets/sass/base/fonts.scss
@@ -23,3 +23,17 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'Acumin Pro';
+  font-style: normal;
+  font-weight: normal;
+  src: url("../fonts/Acumin-RPro.woff") format("woff");
+}
+
+@font-face {
+  font-family: 'Acumin Pro Bold';
+  font-style: normal;
+  font-weight: normal;
+  src: url("../fonts/Acumin-BdPro.woff") format("woff");
+}
