--- a/src/assets/sass/base/variables.scss
+++ b/src/assets/sass/base/variables.scss
@@ -17,9 +17,9 @@
  * Base font family
 */
 
-$base-font-family: "Acumin Pro", sans-serif;
-$base-font-family-medium: "Acumin Pro", sans-serif;
-$base-font-family-bold: "Acumin Pro", sans-serif;
+$base-font-family: "Avenir Next Ultra Light", sans-serif;
+$base-font-family-medium: "Avenir Next Ultra Light", sans-serif;
+$base-font-family-bold: "Avenir Next Ultra Light", sans-serif;
 /*
  * Base font sizes
 */
