Adding new project showcase.

--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -27,6 +27,7 @@
 @import "./components/accordion";
 @import "./components/client";
 @import "./components/form";
+@import "./components/modal";
 
 // Outside sources
 @import "./vendor/animate";
