--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -13,7 +13,7 @@
           </div>
           <div class="col-12 col-md-6 align-self-end">
             <div class="footer-right">
-                <p>&copy; Copyright Oakland Agency 2022</p>
+                <p>&copy; Copyright Oakland Agency <span id="year"></span></p>
             </div>
           </div>
         </div>
